fixed the login prompt covering the signup button

--- a/client/src/react-components/Home/styles.css
+++ b/client/src/react-components/Home/styles.css
@@ -1,7 +1,7 @@
 /* Styles for the Home React component */
 .sign_up_box_container {
     width: 50%;
-    margin-top: 10vh;
+    margin-top: 6vh;
     margin-left: auto;
     margin-right: auto;
 }
